packages/typ/tests/fixtures/diagnostics/0946_gadt_equality_cast_mismatch_09.ml.infer.expected
File "0946_gadt_equality_cast_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0946_gadt_equality_cast_mismatch_09 is not a valid module name.

File "0946_gadt_equality_cast_mismatch_09.ml", line 7, characters 19-23:
7 |     | Refl_iota -> true
                       ^^^^
Error: The constructor true has type bool
       but an expression was expected of type b = a
